# GenAI-Cold-Email-Generator

./: email_generator.ipynb  pyproject.toml  requirements.txt
app/: chains.py
vectorstore/: chroma.sqlite3
