[project]
name = "project-genai-cold-email-generator-main"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb==0.5.0",
    "langchain==0.2.14",
    "langchain-community==0.2.12",
    "langchain-groq==0.1.9",
    "onnxruntime==1.17.3",
    "pandas==2.0.2",
    "python-dotenv==1.0.0",
    "selenium==4.21.0",
    "streamlit==1.35.0",
    "unstructured==0.14.6",
]
